--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -63,11 +63,10 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li><a href="{% url 'index' %}">Main</a></li>
-	        <li><a href="{% url 'contact' %}">Contacts<span class="sr-only">(current)</span></a></li>
-	        <li><a href="{% url 'student_list' %}">Students<span class="sr-only">(current)</span></a></li>
-	        </li>
-	      </ul>
+          <li><a href="{% url 'index' %}">Main</a></li>
+          <li><a href= "{% url 'contact' %}">Contacts</a></li>
+          <li><a href="{% url 'student_list' %}">Students</a></li>
+        </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
