--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -26,9 +26,8 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a href="{% url 'index' %}">Main</a></li>
-          <li><a href="{% url 'contact' %}">Contacts<span class="sr-only">(current)</span></a></li>
-          <li><a href="{% url 'students:list_view' %}">Students<span class="sr-only">(current)</span></a></li>
-          </li>
+          <li><a href="{% url 'contact' %}">Contacts</a></li>
+          <li><a href="{% url 'students:list_view' %}">Students</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
