--- a/templates/contact.html
+++ b/templates/contact.html
@@ -38,7 +38,7 @@
         <ul class="nav navbar-nav">
           <li><a href="{% url 'index' %}">Main</a></li>
           <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-          <li class="active"><a href="{% url 'students:list_view' %}">Students</a></li>
+          <li><a href="{% url 'students:list_view' %}">Students</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -92,7 +92,7 @@
     </div>
   </div>
   <div class="panel-footer newfooter">
-    <span class="firma">ItBursa2015</span>
+    Сайт компании <span class="firma">ООО"блбаба"</span>. <span id="prava">Все права защищены</span>
   </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
