--- a/templates/index.html
+++ b/templates/index.html
@@ -37,9 +37,9 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li><a href="{% url 'index' %}">Main</a></li>
+          <li  class="active"><a href="{% url 'index' %}">Main</a></li>
           <li><a href="{% url 'contact' %}">Contacts</a></li>
-          <li class="active"><a href="{% url 'students:list_view' %}">Students</a></li>
+          <li><a href="{% url 'students:list_view' %}">Students</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -94,7 +94,7 @@
     </div>
   </div>
   <div class="panel-footer newfooter">
-    <span class="firma">ItBursa2015</span>
+    Сайт компании <span class="firma">ООО"блбаба"</span>. <span id="prava">Все права защищены</span>
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
