--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -66,7 +66,8 @@
       <div class="panel panel-default">
       <div class="panel-heading">Ассистент</div>
       <div class="panel-body">
-        Panel content
+        <p><b><a href="{% url 'coaches:detail' pk=course_object.assistant.id %}">{{ course_object.assistant.user.first_name }} {{ course_object.assistant.user.last_name }}</a></b></p>
+        <p>{{ course_object.assistant.description }}</p>
       </div>
       </div>
 
