--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -55,7 +55,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">Ассистент</div>
         <div class="panel-body">
-         <a href="{% url 'coaches:detail' course.coach.id %}">{{ course.assistant.name }} {{ course.assistant.surname }}</a><br /><br />
+         <a href="{% url 'coaches:detail' course.assistant.id %}">{{ course.assistant.name }} {{ course.assistant.surname }}</a><br /><br />
         {{ course.assistant.description }}
         </div>
       </div>
