--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -40,22 +40,9 @@
       </div>
     </nav>
     <div class="container">
-      <h1>{{ coach.user.first_name }} {{ coach.user.last_name }}</h1>
+      <h1>{{ coach.full_name }}</h1>
       <div class="thumbnail">
-        <div class="row">
-          <div class="col-md-12 lead">
-          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-              <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingOne">
-                  <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Coach
-                    </a>
-                  </h4>
-                </div>
-                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                  <div class="panel-body">
-                    <table>
+                        <table>
                           <th>дата рождения</th>
                           <td>{{ coach.date_of_birth }}</td>
                         </tr>
@@ -88,12 +75,7 @@
                         </tr>
                         {% endif %}
                     </table>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+                 
       </div>
     </div> 
          
