--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     
-    <title>{{ course }}</title>
+    <title>Course details</title>
 {% load staticfiles %}
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -47,6 +47,9 @@
       
       <h1>{{ course.name }}</h1>
       <p>{{ course.description }}</p>
+       
+
+      <h2>Преподаватели</h2>
        {% if course.coach %}
        <div>
          
