--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -50,22 +50,20 @@
        
 
       <h2>Преподаватели</h2>
-       {% if course.coach %}
+    
        <div>
          
             <h3>Учитель</h3>
             <h4><a href={% url 'coaches:detail' course.coach.id %}>{{course.coach.full_name}}</a></h4>
             <p>{{course.coach.description}}</p>
           
-       {% endif %}
-       {% if course.assistant %}
-         
+     
             <h3>Ассистент</h3>
             <h4><a href={% url 'coaches:detail' course.assistant.id %}>{{course.assistant.full_name}}</a></h4>
             <p>{{course.assistant.description}}</p>
            
-       <div>
-       {% endif %}
+       </div>
+    
     </div>
         <table class="table table-bordered">
           <thead>
