--- a/coaches/templates/coaches/detail.html
+++ b/coaches/templates/coaches/detail.html
@@ -40,46 +40,55 @@
     <div class="jumbotron">
       <div class="text-center">
 
-        <h1>{{ course.name }}</h1>
+        <h1>Course coach</h1>
 
       </div>
-      <p class="lead">{{ course.description }}</p>
+      <p class="lead">{{ coach.full_name }}</p>
     </div>
-    <div class= "jumbotron container">
-    <h2>Teachers</h2>
-    <h3>Coach</h3>
-    <h4><a href={% url 'coaches:detail' coach.id %}>{{coach.first_name}} {{coach.last_name}}</a></h4>
-    <h6>{{coach.description}}</h6>
-    <h3>Assistant</h3>
-    <h4><a href={% url 'coaches:detail' assistant.id %}>{{assistant.first_name}} {{assistant.last_name}}</a></h4>
-    <h6>{{assistant.description}}</h6>
-  </div>
-  <div class="jumbotron container">
-    <h2>Course lessons</h2>
-    <table class="table ">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Lesson</th>
-          <th>Description</th>
-        </tr>
-      </thead>
+    <div class="row marketing">
+<div class="jumbotron container">
+    <h2>{{teacher.first_name}} {{teacher.last_name}}</h2>
+    <table class="table">
       <tbody>
-      {% for lesson in lessons %}
         <tr>
-          <td>{{lesson.order}}</td>
-          <td>{{lesson.subject}}</td>
-          <td>{{lesson.description}}</td>
+          <td>Birth Date</td>
+          <td>{{teacher.date_of_birth}}</td>
         </tr>
-      {% endfor %}
+        <tr>
+          <td>Address</td>
+          <td>{{teacher.address}}</td>
+        </tr>
+        <tr>
+          <td>Email</td>
+          <td>{{teacher.email}}</td>
+        </tr>
+        <tr>
+          <td>Skype</td>
+          <td>{{teacher.skype}}</td>
+        </tr>
+        <tr>
+          <td>Phone</td>
+          <td>{{teacher.phone}}</td>
+        </tr>
+        <tr>
+          <td>Courses as Coach</td>
+          <td>
+          {% for course in course_coach %}
+            <a href={% url 'courses:detail' course.id %}>{{course.name}} <a href={% url 'students:list_view'%}?course_id={{course.id}}><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a></a>
+          {% endfor %}
+          </td>
+        </tr>
+        <tr>
+          <td>Courses as Assistant</td>
+          <td>
+          {% for course in course_assistant %}
+            <a href={% url 'courses:detail' course.id %}>{{course.name}} <a href={% url 'students:list_view'%}?course_id={{course.id}}><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a></a>
+          {% endfor %}
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
-      </div>
-
-
-    </div>
-
   </div><!-- /container -->
   <footer class="footer">
     </footer>
