--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,103 +1,50 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %} 
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bursa</title>
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-</head>
+{% load staticfiles %} 
 
-<body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static "images/logo.jpg" %}" alt="img" ></a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    
-                    <li><a href="{% url 'index' %}">Main</a></li>
-                    <li><a href="{% url 'contact' %}">Contacts</a></li>
-                    <li><a href="{% url 'students:list_view' %}?course_id={{courses.id}}">Students</a></li>
-                    <li><a href="{% url 'results' %}">Equation</a></li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
+
+{% block title %}Courses Page{%endblock%}
+
+
+{% block nav_class_index %}active{% endblock %}
+
+
+{% block students_url_id %}?course_id={{courses.id}}{% endblock %}
+
+
+{% block content %}
+    <div class="col-lg-12">
+        <div class="well">
+            <h1>{{ courses|upper }}</h1>
+            <p>{{ courses.description|truncatechars:32|title }}</p>
         </div>
-        <!-- /.container-fluid -->
-    </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="well">
-                    <h1>{{ courses }}</h1>
-                    <p>{{ courses.description }}</p>
-                </div>
-                <h2>Преподаватели</h2>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Учитель</h3>
-                    </div>
-                    <div class="panel-body">
-                        <a href="{% url 'coaches:detail' courses.coach.id %}">{{ coaches }}</a>
-                        <p>{{ courses.coach.description }}</p>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Ассистент</h3>
-                    </div>
-                    <div class="panel-body">
-                        <a href="{% url 'coaches:detail' courses.assistant.id %}">{{ assistants }}</a>
-                        <p>{{ courses.assistant.description }}</p>
-                    </div>
-                </div>
-                <h2>Program about {{ courses }}</h2>
-                <table class="table table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th>#</th>
-                            <th>Тема</th>
-                            <th>Описание</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for lesson in lessons %}
-                        <tr>
-                            <td>{{ lesson.order }}</td>
-                            <td>{{ lesson.subject }}</td>
-                            <td>{{ lesson.description }}</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
+        <h2>Преподаватели</h2> 
+
+
+        {% include 'include/inc_instructor.html' with block_title='Учитель' instructor=courses.coach %} 
+
+        {% include 'include/inc_instructor.html' with block_title='Ассистент' instructor=courses.assistant %}
+
+
+        <h2>Program about {{ courses }}</h2>
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Тема</th>
+                    <th>Описание</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for lesson in lessons %}
+                <tr>
+                    <td>{{ lesson.order }}</td>
+                    <td>{{ lesson.subject }}</td>
+                    <td>{{ lesson.description }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-</body>
+{% endblock content %}
 
-</html>
