--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,4 +64,5 @@
 .detail_courses-logo{ float:right; margin-top:-73px; }
 .back_on_main { margin-left:-130px; }
 .logo-pybursa { width:100px;height:50px; }
+.details-logo{ float:right; margin-top:-73px; }
 
