--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,4 +1,4 @@
-{% extends "base_template.html" %}
+{% extends "base.html" %}
 
 
 {% load staticfiles %}
@@ -8,7 +8,7 @@
 
  
 {% block content %}
-		{% include "courses/includes/inc_course_description.html" %}
+		{% include "courses/includes/course_description_include.html" %}
 		<div class="container">
 			<div class="page-header">
 				<h2>Преподаватели</h2>
