--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 		<div class ='container'>
+			{% include 'include/coaches/coach_include.html' with coaches=coaches %}
 			<h2 align="center">Преподователь курса</h2>
 			<h3 align="center">{{ coach.full_name }}</h3>
 			<div class='grey'>
