--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             <h1>Bursa</h1>
             <p>Данное направление позволяет освоить одну из самых популярных специальностей в IT-индустрии – программист. Немаловажным фактором является то, что слушателям предоставляется возможность ознакомиться с разными направлениями в программировании и выбрать для себя наиболее подходящий вариант. В программу курса включаются все аспекты программирования – начиная от основ алгоритмизации и заканчивая новейшими инструментариями используемыми в современной индустрии. Также в курс включаются предметы выходящие за рамки программирования, где слушатели знакомятся с основами проектирования, построением сложных систем и управлением программными проектами.</p>
         </div>
-        {% filter upper %}<h2>Program</h2>{% endfilter upper%}
+        <h2>Program</h2>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
