--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -8,7 +8,7 @@
   <body>
 		<h2>Квадратное уравнение a*x*x + b*x + c = 0</h2>
 		<form method="get">
-		  {{ context.form.as_p }}
+		  {{ form.as_p }}
 		  <input type="submit" value="Решить" />
 		</form>
 
